Implementing colorScheme approach together with updating templates and affected code. Implementing commandline interface together with several helper methods like XML binding of Options. Switching to JDK8 Base64 encoder.