@@ -1,6 +1,7 @@
 package in.drifted.planisphere.renderer.html;
 
 import in.drifted.planisphere.Options;
+import in.drifted.planisphere.Settings;
 import in.drifted.planisphere.renderer.svg.SvgRenderer;
 import in.drifted.planisphere.util.LocalizationUtil;
 import java.io.BufferedWriter;
@@ -9,10 +10,9 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.Base64;
 import java.util.Map;
 import java.util.Map.Entry;
-import javax.xml.bind.DatatypeConverter;
-import javax.xml.stream.XMLStreamException;
 
 public final class HtmlRenderer {
 
@@ -22,7 +22,11 @@ public final class HtmlRenderer {
         this.svgRenderer = svgRenderer;
     }
 
-    public void createFromTemplateMap(Map<String, Options> templateMap, Path outputPath) throws XMLStreamException, IOException {
+    public void createFromTemplate(String templateName, String colorScheme, Options options, Path outputPath) throws IOException {
+        createFromTemplateMap(Settings.getTemplateOptionsMap(templateName, options), colorScheme, outputPath);
+    }
+    
+    private void createFromTemplateMap(Map<String, Options> templateMap, String colorScheme, Path outputPath) throws IOException {
 
         LocalizationUtil l10n = new LocalizationUtil(templateMap.values().iterator().next().getCurrentLocale());
 
@@ -36,7 +40,7 @@ public final class HtmlRenderer {
 
             for (Entry<String, Options> entry : templateMap.entrySet()) {
                 try (ByteArrayOutputStream outputStream = new ByteArrayOutputStream()) {
-                    svgRenderer.createFromTemplate(entry.getKey(), outputStream, entry.getValue());
+                    svgRenderer.createFromTemplate(entry.getKey(), colorScheme, outputStream, entry.getValue());
                     writer.append(getBase64EncodedImage(outputStream.toByteArray()));
                 }
             }
@@ -48,7 +52,7 @@ public final class HtmlRenderer {
 
         StringBuilder result = new StringBuilder();
         result.append("<img src=\"data:image/svg+xml;base64,");
-        result.append(DatatypeConverter.printBase64Binary(imageByteArray));
+        result.append(Base64.getEncoder().encodeToString(imageByteArray));
         result.append("\"/>");
 
         return result.toString();
